Fix dropdown not showing in no-js

--- a/public/css/icinga/nav.less
+++ b/public/css/icinga/nav.less
@@ -12,7 +12,7 @@
 
 .dropdown-nav-item > ul {
   display: none;
-  position: absolute;
+  position: fixed;
 }
 
 .dropdown-nav-item.active > ul,
